--- a/tasks/enable_pro_version.yml
+++ b/tasks/enable_pro_version.yml
@@ -25,10 +25,24 @@
   when: nexus_properties_file.stat.exists == false
   tags: nexus-postgres,nexus-migrate,nexus-pro
 
-- name: Copy the license file to the target
-  ansible.builtin.copy:
-    src: "{{ nexus_pro_license_file }}"
-    dest: "{{ nexus_data_dir }}/etc/license.lic"
+# TODO: check if the environment variable NEXUS_PRO_LICENSE_B64 is set otherwise use the ansible variable NEXUS_LICENSE
+- name: Set the license file content
+  ansible.builtin.shell: |
+    echo $NEXUS_PRO_LICENSE_B64 | tr -d ' ' > "{{ nexus_data_dir }}/etc/license.b64"
+  environment:
+    NEXUS_PRO_LICENSE_B64: "{{ lookup('env', 'NEXUS_PRO_LICENSE_B64') }}"
+  tags: nexus-postgres,nexus-migrate,nexus-pro
+
+# base64 decode the license file
+- name: Decode the license file
+  ansible.builtin.shell: |
+    base64 -d "{{ nexus_data_dir }}/etc/license.b64" > "{{ nexus_data_dir }}/etc/license.lic"
+  tags: nexus-postgres,nexus-migrate,nexus-pro
+
+# set file permissions for "{{ nexus_data_dir }}/etc/license.lic"
+- name: Set the license file permissions
+  ansible.builtin.file:
+    path: "{{ nexus_data_dir }}/etc/license.lic"
     owner: "{{ nexus_os_user }}"
     group: "{{ nexus_os_group }}"
     mode: "0640"
