--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -180,6 +180,9 @@
         - "{{ _nexus_repos_pypi_proxy }}"
         - "{{ _nexus_repos_pypi_hosted }}"
         - "{{ _nexus_repos_pypi_group }}"
+        - "{{ _nexus_repos_raw_proxy }}"
+        - "{{ _nexus_repos_raw_hosted }}"
+        - "{{ _nexus_repos_raw_group }}"
         - "{{ _nexus_repos_bower_proxy }}"
         - "{{ _nexus_repos_bower_hosted }}"
         - "{{ _nexus_repos_bower_group }}"
