--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -487,130 +487,160 @@
             (nexus_repos_pypi_group | map('combine', {"format": "pypi", "type": "group"}) | list)
           }}
 
-#       ansible.builtin.set_fact:
-#         nexus_repos_bower_group: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_bower_group -%}
-#             {{ result.append(_nexus_repos_bower_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+- name: Process definitions for raw repositories
+  when: nexus_config_raw | bool
+  block:
+    - name: Apply defaults to raw proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_raw_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_raw_proxy -%}
+            {%- set combined_repo = _nexus_repos_raw_defaults | combine(repo) -%}
+            {%- set authentication = {
+                'type': combined_repo.remote_auth_type | default('username'),
+                'username': combined_repo.remote_username | default('username'),
+                'password': combined_repo.remote_password | default('password'),
+                'ntlmHost': combined_repo.ntlm_host | default(omit),
+                'ntlmDomain': combined_repo.ntlm_domain | default(omit),
+                'preemptive': combined_repo.preemptive | default(omit)
+            } if combined_repo.remote_auth_type is defined or combined_repo.remote_username is defined else omit -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'proxy': {
+                'remoteUrl': combined_repo.remote_url | default(omit),
+                'contentMaxAge': combined_repo.maximum_component_age | default(omit),
+                'metadataMaxAge': combined_repo.maximum_metadata_age | default(omit)
+              },
+              'negativeCache': {
+                'enabled': combined_repo.negative_cache_enabled | default(omit),
+                'timeToLive': combined_repo.negative_cache_ttl | default(omit)
+              },
+              'httpClient': {
+                'blocked': combined_repo.blocked | default(false),
+                'autoBlock': combined_repo.auto_block | default(true),
+                'connection': {
+                  'retries': combined_repo.connection_retries | default(omit),
+                  'useTrustStore': combined_repo.use_trust_store | default(omit),
+                  'userAgentSuffix': combined_repo.user_agent_suffix | default(omit),
+                  'timeout': combined_repo.connection_timeout | default(omit),
+                  'enableCircularRedirects': combined_repo.enable_circular_redirects | default(omit),
+                  'enableCookies': combined_repo.enable_cookies | default(omit)
+                },
+                'authentication': authentication | default(omit)
+              },
+              'replication': {
+                'preemptivePullEnabled': combined_repo.replication_preemptive_pull_enabled | default(omit),
+                'assetPathRegex': combined_repo.replication_asset_path_regex | default
+                },
+              'routingRule': combined_repo.routing_rule | default(omit),
+              'raw': {
+                'contentDisposition': combined_repo.content_disposition | default('INLINE') | upper
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-#     - name: Add bower repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_bower_proxy | map('combine', {"format": "bower", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_bower_hosted | map('combine', {"format": "bower", "type": "hosted"}) | list)
-#             +
-#             (nexus_repos_bower_group | map('combine', {"format": "bower", "type": "group"}) | list)
-#           }}
+    - name: Apply defaults to raw hosted repos
+      ansible.builtin.set_fact:
+        nexus_repos_raw_hosted: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_raw_hosted -%}
+            {%- set combined_repo = _nexus_repos_raw_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'component': {
+                'proprietaryComponents': true
+              },
+              'raw': {
+                'contentDisposition': combined_repo.content_disposition | default('INLINE') | upper
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-# - name: Process definitions for npm repositories
-#   when: nexus_config_npm | bool
-#   block:
-#     - name: Apply defaults to npm proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_npm_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_npm_proxy -%}
-#             {{ result.append(_nexus_repos_npm_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+    - name: Apply defaults to raw group repos
+      ansible.builtin.set_fact:
+        nexus_repos_raw_group: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_raw_group -%}
+            {%- set combined_repo = _nexus_repos_raw_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'group': {
+                'memberNames': combined_repo.member_repos | default([])
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-#     - name: Apply defaults to npm hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_npm_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_npm_hosted -%}
-#             {{ result.append(_nexus_repos_npm_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to npm group repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_npm_group: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_npm_group -%}
-#             {{ result.append(_nexus_repos_npm_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add npm repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_npm_proxy | map('combine', {"format": "npm", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_npm_hosted | map('combine', {"format": "npm", "type": "hosted"}) | list)
-#             +
-#             (nexus_repos_npm_group | map('combine', {"format": "npm", "type": "group"}) | list)
-#           }}
-
-# - name: Process definitions for nuget repositories
-#   when: nexus_config_nuget | bool
-#   block:
-#     - name: Apply defaults to nuget proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_nuget_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_nuget_proxy -%}
-#             {{ result.append(_nexus_repos_nuget_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to nuget hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_nuget_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_nuget_hosted -%}
-#             {{ result.append(_nexus_repos_nuget_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to nuget group repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_nuget_group: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_nuget_group -%}
-#             {{ result.append(_nexus_repos_nuget_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add nuget repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_nuget_proxy | map('combine', {"format": "nuget", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_nuget_hosted | map('combine', {"format": "nuget", "type": "hosted"}) | list)
-#             +
-#             (nexus_repos_nuget_group | map('combine', {"format": "nuget", "type": "group"}) | list)
-#           }}
-
-# - name: Process definitions for gitlfs repositories
-#   when: nexus_config_gitlfs | bool
-#   block:
-#     - name: Apply defaults to gitlfs hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_gitlfs_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_gitlfs_hosted -%}
-#             {{ result.append(_nexus_repos_gitlfs_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add gitlfs repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
+    - name: Add raw repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_raw_proxy | map('combine', {"format": "raw", "type": "proxy"}) | list)
+            +
+            (nexus_repos_raw_hosted | map('combine', {"format": "raw", "type": "hosted"}) | list)
+            +
+            (nexus_repos_raw_group | map('combine', {"format": "raw", "type": "group"}) | list)
+          }}
+        _nexus_repos_raw_proxy: >-
+          {{
+            _nexus_repos_raw_proxy | default([])
+            +
+            (nexus_repos_raw_proxy | map('combine', {"format": "raw", "type": "proxy"}) | list)
+          }}
+        _nexus_repos_raw_hosted: >-
+          {{
+            _nexus_repos_raw_hosted | default([])
+            +
+            (nexus_repos_raw_hosted | map('combine', {"format": "raw", "type": "hosted"}) | list)
+          }}
+        _nexus_repos_raw_group: >-
+          {{
+            _nexus_repos_raw_group | default([])
+            +
+            (nexus_repos_raw_group | map('combine', {"format": "raw", "type": "group"}) | list)
+          }}
 #             +
 #             (nexus_repos_gitlfs_hosted | map('combine', {"format": "gitlfs", "type": "hosted"}) | list)
 #           }}
