--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -1124,6 +1124,158 @@
             +
             (nexus_repos_npm_group | map('combine', {"format": "npm", "type": "group"}) | list)
           }}
+
+- name: Process definitions for nuget repositories
+  when: nexus_config_nuget | bool
+  block:
+    - name: Apply defaults to nuget proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_nuget_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_nuget_proxy -%}
+            {%- set combined_repo = _nexus_repos_nuget_defaults | combine(repo) -%}
+            {%- set authentication = {
+                'type': combined_repo.remote_auth_type | default('username'),
+                'username': combined_repo.remote_username | default('username'),
+                'password': combined_repo.remote_password | default('password'),
+                'ntlmHost': combined_repo.ntlm_host | default(omit),
+                'ntlmDomain': combined_repo.ntlm_domain | default(omit),
+                'preemptive': combined_repo.preemptive | default(omit)
+            } if combined_repo.remote_auth_type is defined or combined_repo.remote_username is defined else omit -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'proxy': {
+                'remoteUrl': combined_repo.remote_url | default(omit),
+                'contentMaxAge': combined_repo.maximum_component_age | default(omit),
+                'metadataMaxAge': combined_repo.maximum_metadata_age | default(omit)
+              },
+              'negativeCache': {
+                'enabled': combined_repo.negative_cache_enabled | default(omit),
+                'timeToLive': combined_repo.negative_cache_ttl | default(omit)
+              },
+              'httpClient': {
+                'blocked': combined_repo.blocked | default(false),
+                'autoBlock': combined_repo.auto_block | default(true),
+                'connection': {
+                  'retries': combined_repo.connection_retries | default(omit),
+                  'useTrustStore': combined_repo.use_trust_store | default(omit),
+                  'userAgentSuffix': combined_repo.user_agent_suffix | default(omit),
+                  'timeout': combined_repo.connection_timeout | default(omit),
+                  'enableCircularRedirects': combined_repo.enable_circular_redirects | default(omit),
+                  'enableCookies': combined_repo.enable_cookies | default(omit)
+                },
+                'authentication': authentication | default(omit)
+              },
+              'replication': {
+                'preemptivePullEnabled': combined_repo.replication_preemptive_pull | default(omit),
+                'assetPathRegex': combined_repo.replication_asset_path_regex | default(omit)
+              },
+              'routingRule': combined_repo.routing_rule | default(omit),
+              'nugetProxy': {
+                'queryCacheItemMaxAge': combined_repo.query_cache_item_max_age | default(omit),
+                'nugetVersion': combined_repo.nuget_version | default(omit)
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Apply defaults to nuget hosted repos
+      ansible.builtin.set_fact:
+        nexus_repos_nuget_hosted: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_nuget_hosted -%}
+            {%- set combined_repo = _nexus_repos_nuget_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'component': {
+                'proprietaryComponents': true
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Apply defaults to nuget group repos
+      ansible.builtin.set_fact:
+        nexus_repos_nuget_group: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_nuget_group -%}
+            {%- set combined_repo = _nexus_repos_nuget_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'group': {
+                'memberNames': combined_repo.member_repos | default([])
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Add nuget repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_nuget_proxy | map('combine', {"format": "nuget", "type": "proxy"}) | list)
+            +
+            (nexus_repos_nuget_hosted | map('combine', {"format": "nuget", "type": "hosted"}) | list)
+            +
+            (nexus_repos_nuget_group | map('combine', {"format": "nuget", "type": "group"}) | list)
+          }}
+        _nexus_repos_nuget_proxy: >-
+          {{
+            _nexus_repos_nuget_proxy | default([])
+            +
+            (nexus_repos_nuget_proxy | map('combine', {"format": "nuget", "type": "proxy"}) | list)
+          }}
+        _nexus_repos_nuget_hosted: >-
+          {{
+            _nexus_repos_nuget_hosted | default([])
+            +
+            (nexus_repos_nuget_hosted | map('combine', {"format": "nuget", "type": "hosted"}) | list)
+          }}
+        _nexus_repos_nuget_group: >-
+          {{
+            _nexus_repos_nuget_group | default([])
+            +
+            (nexus_repos_nuget_group | map('combine', {"format": "nuget", "type": "group"}) | list)
+          }}
 - name: Process definitions for p2 repositories
   when: nexus_config_p2 | bool
   block:
