--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -195,6 +195,7 @@
         - "{{ _nexus_repos_nuget_proxy }}"
         - "{{ _nexus_repos_nuget_hosted }}"
         - "{{ _nexus_repos_nuget_group }}"
+        - "{{ _nexus_repos_gitlfs_hosted }}"
         - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
