--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -1276,6 +1276,53 @@
             +
             (nexus_repos_nuget_group | map('combine', {"format": "nuget", "type": "group"}) | list)
           }}
+
+- name: Process definitions for gitlfs repositories
+  when: nexus_config_gitlfs | bool
+  block:
+    - name: Apply defaults to gitlfs hosted repos
+      ansible.builtin.set_fact:
+        nexus_repos_gitlfs_hosted: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_gitlfs_hosted -%}
+            {%- set combined_repo = _nexus_repos_gitlfs_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'component': {
+                'proprietaryComponents': true
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Add gitlfs repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_gitlfs_hosted | map('combine', {"format": "gitlfs", "type": "hosted"}) | list)
+          }}
+        _nexus_repos_gitlfs_hosted: >-
+          {{
+            _nexus_repos_gitlfs_hosted | default([])
+            +
+            (nexus_repos_gitlfs_hosted | map('combine', {"format": "gitlfs", "type": "hosted"}) | list)
+          }}
 - name: Process definitions for p2 repositories
   when: nexus_config_p2 | bool
   block:
