--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -201,6 +201,8 @@
         - "{{ _nexus_repos_yum_group }}"
         - "{{ _nexus_repos_apt_proxy }}"
         - "{{ _nexus_repos_apt_hosted }}"
+        - "{{ _nexus_repos_helm_proxy }}"
+        - "{{ _nexus_repos_helm_hosted }}"
         - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
