--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -207,6 +207,7 @@
         - "{{ _nexus_repos_r_hosted }}"
         - "{{ _nexus_repos_r_group }}"
         - "{{ _nexus_repos_p2_proxy }}"
+        - "{{ _nexus_repos_conda_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
       when: nexus_use_api_for_provisioning | default(false) | bool
